# Ros_giua_ky_2026

./: README.md
xe_ros/: CMakeLists.txt  arm_teleop.py  package.xml
xe_ros/config/: arm_controller.yaml  joint_names_xe_ros.yaml
xe_ros/launch/: display.launch  gazebo.launch.py
xe_ros/meshes/: base_link.STL  camera.STL  front_left_wheel.STL  front_right_wheel.STL  gps.STL  left_steer.STL  lidar.STL  link1.STL  link2.STL  rear_left_wheel.STL  rear_right_wheel.STL  right_steer.STL
xe_ros/rviz/: xe_ros.rviz
xe_ros/scripts/: arm_control_node.py
xe_ros/urdf/: xe_ros.csv  xe_ros.urdf
